se agrego pantallas, splash, mejoras , pedidos

--- a/app/src/main/res/layout/activity_buscar_producto.xml
+++ b/app/src/main/res/layout/activity_buscar_producto.xml
@@ -47,12 +47,13 @@
                     android:background="@null"
                     android:gravity="center|left"
                     android:hint="Buscar"
+                    android:inputType="textFilter"
                     android:imeOptions="actionSearch"
-                    android:inputType="text"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:textColor="#797D7F"
                     />
+
             </LinearLayout>
 
         </LinearLayout>
@@ -312,6 +313,7 @@
 
             <!--INICIO-->
             <Button
+                android:id="@+id/btn_inicio"
                 android:textAllCaps="false"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
@@ -327,6 +329,7 @@
 
             <!--BUSCAR-->
             <Button
+                android:id="@+id/btn_buscar"
                 android:textAllCaps="false"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
@@ -342,6 +345,7 @@
 
             <!--CARRITO-->
             <Button
+                android:id="@+id/btn_carrito"
                 android:textAllCaps="false"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
@@ -357,6 +361,7 @@
 
             <!--PERFIL-->
             <Button
+                android:id="@+id/btn_perfil"
                 android:textAllCaps="false"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
