--- a/app/src/main/res/layout/activity_confirmar_pedido.xml
+++ b/app/src/main/res/layout/activity_confirmar_pedido.xml
@@ -16,38 +16,30 @@
         android:gravity="center" >
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:text="CONFIRMAR PEDIDO"
-                android:gravity="center"
-                />
-            <ImageButton
-                android:layout_width="45dp"
-                android:layout_height="60dp"
-                android:background="@drawable/ic_izquierda"
-                android:backgroundTint="#fff"
-                />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:text="CONFIRMAR PEDIDO"
+            android:gravity="center"
+            />
+        <ImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="45dp"
+            android:layout_height="60dp"
+            android:background="@drawable/ic_izquierda"
+            android:backgroundTint="#fff"
+            />
 
 
 
     </RelativeLayout>
 
-
-<LinearLayout
-
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_below="@+id/header"
-    android:layout_above="@+id/msj_confirmacion"
-    android:gravity="center_horizontal"
-    >
-
     <TextView
+        android:layout_below="@+id/header"
+        android:id="@+id/tvTitle1"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
@@ -56,24 +48,63 @@
         android:text="Por favor ingrese su número de celúlar para que el vendedor se pueda contactar con usted."
         />
 
-
     <EditText
+        android:layout_below="@+id/tvTitle1"
+        android:id="@+id/ed_numeroCelular"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:hint="999 999 999"
-
+        android:hint="999999999"
         android:paddingLeft="10dp"
         android:drawablePadding="5dp"
         android:drawableLeft="@drawable/ic_telefono"
         android:drawableTint="#615f5f"
-
+        android:inputType="phone"
         android:background="@drawable/bg_border_completo"
-
         />
 
-</LinearLayout>
+    <EditText
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/ed_numeroCelular"
+        android:id="@+id/ed_referencia"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:hint="Referencia"
+        android:background="@drawable/bg_border_completo"
+        android:drawablePadding="5dp"
+        android:drawableLeft="@drawable/ic_ubicacion"
+        android:drawableTint="#615f5f"
+        android:paddingLeft="10dp"
+        />
+    <EditText
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/ed_referencia"
+        android:id="@+id/ed_observacion"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:hint="Comentario"
+        android:background="@drawable/bg_border_completo"
+        android:drawablePadding="5dp"
+        android:drawableLeft="@drawable/ic_comentario"
+        android:drawableTint="#615f5f"
+        android:paddingLeft="10dp"
+        />
+
+
+    <ProgressBar
+        android:layout_below="@id/ed_observacion"
+        android:layout_above="@+id/msj_confirmacion"
+        android:id="@+id/progress_confirmar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        />
+
 
     <TextView
         android:id="@+id/msj_confirmacion"
