--- a/app/src/main/res/layout/activity_lista_tiendas_cercanas.xml
+++ b/app/src/main/res/layout/activity_lista_tiendas_cercanas.xml
@@ -173,24 +173,30 @@
             android:layout_below="@+id/tvTitulo2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="10dp"
             android:overScrollMode="never"
             android:visibility="gone"
-            ></android.support.v7.widget.RecyclerView>
+            />
 
-        <ProgressBar
-            android:layout_below="@+id/tvTitulo2"
-            android:padding="160dp"
-            android:paddingVertical="20dp"
-            android:layout_gravity="center_vertical"
-            android:id="@+id/progress_tiendas_cercanas"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="visible" />
+
+
+
+
 
     </RelativeLayout>
+
+    <ProgressBar
+        android:layout_below="@+id/boody"
+        android:layout_marginTop="50dp"
+        android:paddingVertical="20dp"
+
+        android:layout_centerInParent="true"
+
+        android:id="@+id/progress_tiendas_cercanas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible" />
 
 
 </RelativeLayout>
