--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="end"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:background="#354A6B"
+            android:background="#0089BA"
             >
 
         </LinearLayout>
@@ -176,16 +176,7 @@
                 android:text="Login" />
 
             <!--recordar contrasenia -->
-            <CheckBox
-                android:id="@+id/chk_login_recordar"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="right"
-                android:layoutDirection="rtl"
-                android:text="Recordar contraseña"
-                android:textColor="#888585"
-                android:textStyle="bold"
-                android:textSize="12dp" />
+
 
             <ProgressBar
                 android:id="@+id/progress_login"
@@ -215,7 +206,7 @@
             android:layout_gravity="end"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:background="#354A6B"
+            android:background="#0089BA"
             >
             <!--recuperar cuenta-->
             <TextView
