--- a/app/src/main/res/layout/activity_recover_account.xml
+++ b/app/src/main/res/layout/activity_recover_account.xml
@@ -20,7 +20,7 @@
             android:layout_gravity="end"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:background="#354A6B"
+            android:background="#0089BA"
             >
 
         </LinearLayout>
@@ -160,7 +160,7 @@ pueda actualizar su información."
             android:layout_gravity="end"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:background="#354A6B"
+            android:background="#0089BA"
             >
             <!-- acceder-->
             <TextView
