--- a/app/src/main/res/layout/activity_mensaje_confirmacion.xml
+++ b/app/src/main/res/layout/activity_mensaje_confirmacion.xml
@@ -32,7 +32,7 @@
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                android:text="CONFIRMACIÓN DE PEDIDO"
+                android:text="CONFIRMACIÓN DE CREACIÓN DE CUENTA"
                 android:gravity="center"
                 />
 
@@ -82,7 +82,7 @@
                 android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Su orden ha sido generada!"
+                android:text="Su cuenta ha sido creado!"
                 />
 
             <Button
